--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div class="wrapper">
 
     <section id="lezioni">
+
       <div class="container">
         <h1>Lezioni dove vuoi tu</h1>
         <div class="col-xs-12 col-md-6 col-lg-6">
@@ -30,31 +31,37 @@
           <p>Impara senza muoverti da casa! Scegli da una vastissima lista di maestri abilitati all'insegnamento online, senza doverti preoccupare di distanze e spostamenti</p>
         </div>
       </div>
+
     </section>
+    <!-- lezioni -->
+
 
     <section id="steps">
+
       <div class="container">
         <h1>Come funziona</h1>
-      </div>
-      <div class="col-xs-12 col-md-4 col-lg-4">
-        <img src="assets/img/search.svg" alt="Search">
-        <h3>Cerca</h3>
-        <p>Guarda i profili dei migliori maestri della tua zona. Leggi la loro biografia e le recensioni lasciate dai loro studenti</p>
-      </div>
-      <div class="col-xs-12 col-md-4 col-lg-4">
-        <img src="assets/img/letter.svg" alt="Letter">
-        <h3>Contatta</h3>
-        <p>Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!</p>
-      </div>
-      <div class="col-xs-12 col-md-4 col-lg-4">
-        <img src="assets/img/male.svg" alt="Male">
-        <h3>Inizia a Suonare</h3>
-        <p>Acquista un pacchetto di lezioni! Vuoi cambiare maestro? Le lezioni acquistate valgono con tutti i più di 1400 maestri Cademi!</p>
+        <div class="col-xs-12 col-md-4 col-lg-4">
+          <img src="assets/img/search.svg" alt="Search">
+          <h3>Cerca</h3>
+          <p>Guarda i profili dei migliori maestri della tua zona. Leggi la loro biografia e le recensioni lasciate dai loro studenti</p>
+        </div>
+        <div class="col-xs-12 col-md-4 col-lg-4">
+          <img src="assets/img/letter.svg" alt="Letter">
+          <h3>Contatta</h3>
+          <p>Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!</p>
+        </div>
+        <div class="col-xs-12 col-md-4 col-lg-4">
+          <img src="assets/img/male.svg" alt="Male">
+          <h3>Inizia a Suonare</h3>
+          <p>Acquista un pacchetto di lezioni! Vuoi cambiare maestro? Le lezioni acquistate valgono con tutti i più di 1400 maestri Cademi!</p>
+        </div>
       </div>
 
     </section>
+    <!-- /steps -->
 
     <section id="why">
+
       <div class="container">
         <h1>Perchè Cademi</h1>
         <div class="col-xs-12 col-md-4 col-lg-4">
@@ -72,9 +79,11 @@
           <h3>Flessibile e Conveniente</h3>
           <p>Cademi non ha alcun costo d’iscrizione a differenza delle scuole di musica tradizionali. Inoltre, sei tu a scegliere dove fare lezione e gli orari delle tue lezioni.</p>
         </div>
-
       </div>
+      <!-- container -->
+
     </section>
+    <!-- /why -->
 
   </div>
   <!-- wrapper -->
